--- a/app/templates/base_template.html
+++ b/app/templates/base_template.html
@@ -9,5 +9,6 @@
         <div class="address-bar">Skra 1 | Cholargos, Athens 15562 | 123.456.7890</div>
 		{%include 'nav_bar.html'%}
 		{% block content %}{% endblock %}
+		{%include 'flash_messages.html'%}
 	</body>
 </html>
