--- a/app/templates/home/contact.html
+++ b/app/templates/home/contact.html
@@ -4,7 +4,7 @@
 <!-- Google Maps Location --> 
 <div class="container-fluid wrapper3" style="height: 80%;">
     <div class="col-md-4">
-    <strong>You Will Find Us Here:</strong><br><br><br>
+    <strong>You Will Find Us Here:</strong><hr><br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3739.079002401808!2d23.804242129917718!3d37.99630539500899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a198358d7aa33b%3A0x3cd2077b0e233572!2zzqPOus-BzrEgMSwgzqfOv867zrHPgc6zz4zPgiAxNTUgNjI!5e0!3m2!1sel!2sgr!4v1511443039196" 
         width="90%"
         height="350px" 
@@ -14,7 +14,7 @@
 
     <!--Start of contact form--> 
     <div class="col-md-4">
-        <strong>We Want To Hear Your Opinion.<br>Send Us Your Impressions And Ideas!</strong><br><br>
+        <strong>We Want To Hear Your Opinion!</strong><hr>
 
         <form class="form" action="{{ url_for('home.contact') }}" method="post">
                 {{ form.hidden_tag() }}
@@ -37,27 +37,15 @@
 
     <!-- Working Days/Hours-->
     <div class="col-md-4" style="text-align: center;">
-        <strong style="font-size: 24px;">Store Hours</strong><br><br><br>
+        <strong>Store Hours</strong><hr><br>
         
-        <b><em><u>Monday - Tuesday</u></em></b><br>
-        8:00am - 14:00pm & 16:00pm - 21:00pm<br><br>
-        
-        <b><em><u>Wednesday</u></em></b><br>
-        8:00am - 14:30pm<br><br>        
-        
-        <b><em><u>Thursday - Friday</u></em></b><br>
-        8:00am - 14:00pm & 16:00pm - 21:00pm<br><br>
+        <br><br><b><em><u>Monday - Friday</u></em></b><br>
+        10:00am -  21:00pm<br><br>
 
         <b><em><u>Weekends</u></em></b><br>
         Closed</b><br><br>
     </div>      
 </div>
-
-{% for message in get_flashed_messages() %}
-    <div class="alert alert-danger flash">
-        {{message}}
-    </div>
-{% endfor %}
 
 <!--End of contact form-->  
 {%include 'footer2.html'%}
