--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -82,25 +82,20 @@
         </div>
         <!-- Price & Services catalog -->
         <div class="col-md-4">
-            <div style="font-family: Aisha-script">
+            <div style="font-family: Aisha-script; overflow-y: scroll; max-height: 100vh; ">
                 <h2>Our Services</h2>
                 <hr>
                 <br>
                 <table>
-                <tr>
-                    <td> Standard Manly Haircut.....................................</td>
-                    <td>10€</td>
-                </tr>
-                <td> <br> </td>
-                <tr>
-                    <td> Standard Manly Clean Shave.............................</td>
-                    <td>10€</td>
-                </tr>
-                <td> <br> </td>
-                 <tr>
-                    <td> Standard Manly Beard Trim............................</td>
-                    <td>10€</td>
-                </tr>
+                {% if services_list %}
+                    {% for service in services_list %}
+                        <tr>
+                            <td> {{service.name}} </td>
+                            <td> {{service.cost}}€ </td>
+                        </tr>
+                        <td> <br> </td>
+                    {% endfor %}
+                {% endif %}
                 </table>
             </div>
         </div>
@@ -131,7 +126,7 @@
                     <div class="ribbon"><span id="boxSpan2">DEAL</span></div>
                     <div class="banner-hdr">Father<br>& son(s)</div>
                     <hr>
-                    <div class="banner-bdy">Get your<br> soon to be little men for a haircut<br> and get 20% on the total cost!!</div>
+                    <div class="banner-bdy">Get your<br> little men for a haircut<br> and get 20% on the total cost!!</div>
                     <div style="position: absolute; bottom: 1%; left: 0; right: 0; margin-left: auto; margin-right: auto;">
                         <button type="button" class="btn btn-danger center-block"><a href="{{ url_for('reg_user.appointments') }}" style="text-decoration: none; color:inherit;">Schedule Now !!</a></button>
                     </div>
@@ -155,13 +150,6 @@
             <div class="col-md-0"></div>
         </div>
     </div>  
-
-{% for message in get_flashed_messages() %}
-    <div class="alert alert-danger flash">
-        {{message}}
-    </div>
-{% endfor %}
-
 {%include 'footer.html'%} 
 {%endblock%}
 
