--- a/app/templates/reg_user/appointments.html
+++ b/app/templates/reg_user/appointments.html
@@ -9,9 +9,11 @@
         <div class="alert alert-danger text-centered" style="display: none">
             Please remember that you need to be logged in to make a reservation.
         </div>
-        <div class="alert alert-warning text-centered" style="display: none">
+        {% if current_appointment %}
+        <div class="alert alert-warning text-centered">
             You have an active reservation. If you want to make a new one, please, <a href="{{url_for("reg_user.my_account")}}">cancel</a> the current one or contact us at 123.456.7890!
         </div>
+        {% endif %}
     </div>
     <div class="col-md-2"></div>
 </div>
@@ -38,34 +40,17 @@
                 <label><span class="glyphicon glyphicon-scissors"></span><b>{{ appointment_form.service.label }}</b></label>
                 {{appointment_form.service(class="form-control")}}
             </div>
+            {% if current_appointment %}
+            <button type="submit" class="btn btn-default" disabled>Submit</button>
+            {% else %}
             <button type="submit" class="btn btn-default">Submit</button>
+            {% endif %}
         </form>
     </div>        
 </div>
-<div class="col-md-2"></div>   
-
-<!-- This is the Jinja template using WTForms to determine if the action was successful or not and adapt the layout of the response respectively-->
-{% with successes = get_flashed_messages(category_filter=["info"]) %}
-    {% if successes %}
-        {% for message in successes %}
-            <div class="alert alert-success flash">
-                {{message}}
-            </div>
-        {% endfor %}
-    {% endif %}
-{% endwith %}
-
-{% with errors = get_flashed_messages(category_filter=["error"]) %}
-    {% if errors %}
-        {% for message in errors %}
-            <div class="alert alert-danger flash">
-                {{message}}
-            </div>
-        {% endfor %}
-    {% endif %}
-{% endwith %}
-        
+<div class="col-md-2"></div>          
 <!-- End of content-->
 <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
 {%include 'footer2.html'%}
 {%endblock%}
